# Laba_4.8

./: .pre-commit-config.yaml  README.md  environment  pyproject.toml
doc/: Laba_4.8.docx  ~$ba_4.8.docx  ~WRL0448.tmp
src/: idz1.py  idz2.py  idz3.py  idz4.py  idz5.py  primer1.py  primer10.py  primer11.py  primer12.py  primer13.py  primer2.py  primer3.py  primer4.py  primer5.py  primer6.py  primer7.py  primer8.py  primer9.py
tests/: test_idz1.py  test_idz2.py  test_idz3.py  test_idz4.py  test_idz5.py
