[tool.poetry]
name = "laba-4-8"
version = "0.1.0"
description = ""
authors = ["Evgeni <kkrutkov02@gmail.com>"]
readme = "README.md"
packages = [{include = "laba_4"}]

[tool.poetry.dependencies]
python = "^3.10"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.14.0"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
flake8-pyproject = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.isort]
include_trailing_comma = true
line_length = 79
lines_after_imports = 2

[tool.flake8]
exclude = [
    ".git",
    ".idea",
    "doc",
    "tests",
    ".gitignore"
]
max-line-length = 120
ignore = ["E203", "F841","F405", "F403", "E741"]

[tool.black]
line-length = 120
exclude = """
.idea/
tests/
doc/
"""

[tool.mypy]
ignore_missing_imports = true
exclude = "^(src/primer2.py|src/primer13.py|src/primer5.py|src/primer12.py)"
disable_error_code = ["all"]